# Emi-Mower

./: README.md  dump.rdb
app/: README.md  app.json  global.css  metro.config.js  package-lock.json  package.json
app/app/: _layout.tsx
app/app/(tabs)/: _layout.tsx  controller.tsx
app/components/: Controls.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pom.xml  pyproject.toml
backend/config/: database.py  mqtt.py  settings.py  socketio.py  valkey_client.py
backend/migrations/: env.py
backend/migrations/versions/: 90a7ce1e9933_initial_migration.py  a8acdc13d4e9_added_yard_and_mower_and_updated_user_.py
backend/models/: mower.py  user.py  yard.py
backend/src/: main.py
backend/src/config/: database.py  mqtt.py  valkey_client.py
backend/src/main/java/com/example/backend/: MyTempAppApplication.java
backend/src/main/resources/: application.properties
backend/src/migrations/: env.py
backend/src/models/: mower.py  user.py  yard.py
backend/src/services/: auth.py  firebase_init.py
backend/src/test/java/com/example/my_temp_app/: MyTempAppApplicationTests.java
infrastructure/: .gitignore  IdentityPlatform.tf  README.md  providers.tf
