[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cloud-sql-python-connector[asyncpg]>=1.20.3",
    "fastapi>=0.138.0",
    "firebase-admin>=7.4.0",
    "google-cloud-storage>=3.12.0",
    "motor>=3.7.1",
    "python-socketio>=5.16.3",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
