[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.5.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cloud-sql-python-connector[asyncpg]>=1.20.3",
    "fastapi>=0.138.0",
    "firebase-admin>=7.4.0",
    "google-cloud-storage>=3.12.0",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "python-socketio>=5.16.3",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
]

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
select = ["E", "F", "W", "I"]
fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings (just like Prettier defaults!)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
